# coinbase-advanced-cpp

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: coinbase-advanced-cppConfig.cmake.in
examples/: CMakeLists.txt  market_data_user_thread_callbacks.cpp  market_data_ws_callbacks.cpp  multi_websockets_user_thread_callbacks.cpp  multi_websockets_ws_callbacks.cpp  multi_websockets_ws_callbacks_reader.cpp
include/coinbase/: account.h  account.hpp  auth.h  auth.hpp  candle.h  candle.hpp  common.h  common.hpp  convert.hpp  fill.h  fill.hpp  futures.hpp  key_permissions.hpp  level2_book.h  level2_book.hpp  logging.hpp  market_data.h  market_data.hpp  order.h  order.hpp  payment_method.hpp  perpetuals.hpp  portfolio.hpp  position.h  position.hpp  price_book.h  price_book.hpp  product.h  product.hpp  rest.h  rest.hpp  rest_awaitable.h  rest_awaitable.hpp  side.h  side.hpp  trades.h  trades.hpp  utils.h  utils.hpp  websocket.h  (+1 more)
src/: auth.cpp  logging.cpp  rest.cpp  rest_awaitable.cpp  utils.cpp  websocket.cpp
tests/: CMakeLists.txt  rest_api_tests.cpp  rest_awaitable_tests.cpp  timestamp_parsing_tests.cpp  websocket_tests.cpp
